Updated eBay link to fromtheatticla

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
         <!-- About Link -->
         <a href="/about.html" class="hover:text-gray-400 transition-colors duration-300">About</a>
         <!-- eBay Store Link -->
-        <a href="https://www.ebay.com/usr/your-ebay-username" target="_blank" rel="noopener noreferrer" class="hover:text-gray-400 transition-colors duration-300">
-          eBay Store
+        <a href="https://www.fromtheatticla.com" target="_blank" rel="noopener noreferrer" class="hover:text-gray-400 transition-colors duration-300">
+          Check out our store
         </a>
         <!-- Instagram Link -->
         <a href="https://www.instagram.com/your-instagram-username" target="_blank" rel="noopener noreferrer" class="hover:text-gray-400 transition-colors duration-300">
@@ -231,8 +231,8 @@
   <footer class="bg-gray-800 text-gray-100 py-6">
     <div class="container mx-auto text-center">
       <p class="mb-4 text-lg font-light">Looking for more vintage treasures?</p>
-      <a href="https://www.ebay.com/usr/your-ebay-username" target="_blank" rel="noopener noreferrer" class="inline-block bg-gray-700 hover:bg-gray-600 text-gray-100 py-3 px-6 rounded transition-colors duration-300 uppercase tracking-wider font-bold">
-        Visit our eBay Store
+      <a href="https://www.fromtheatticla.com" target="_blank" rel="noopener noreferrer" class="inline-block bg-gray-700 hover:bg-gray-600 text-gray-100 py-3 px-6 rounded transition-colors duration-300 uppercase tracking-wider font-bold">
+        Visit our store
       </a>
     </div>
   </footer>
